# sqlite-privacy-boundary

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: formal_boundary.md  method.md
examples/: minimal.py
src/sqlite_privacy_boundary/: __init__.py  audit.py  boundary.py  pii.py  selfcheck.py  topics.py
tests/: test_boundary.py
