[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-privacy-boundary"
version = "0.1.0"
description = "Dependency-free SQLite release-boundary experiments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Pablo Zavala" }]
dependencies = []

[project.scripts]
spb-verify = "sqlite_privacy_boundary.selfcheck:main"

[tool.setuptools.packages.find]
where = ["src"]
